--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "animate.css": "^3.1.1",
     "bootstrap": "^3.3.7",
     "dom-tools": "^0.1.4",
+    "exif-js": "^2.1.1",
     "firebase": "^3.6.4",
     "font-awesome": "^4.6.1",
     "history": "^3.0.0",
